@@ -438,9 +438,7 @@ class SiteHandler(WebHandler):
            customPlatform = None,
            kwargs={'domainname': self.cfg.projectDomainName.split(':')[0], 
                    'appliance': 'unknown', 
-                   'prodtype' : 'Appliance', 
-                   'namespace': self.cfg.namespace,
-                   'isPrivate': False,
+                   'prodtype' : 'Appliance',
                    'platformLabel': platformLabel})
 
     @mailList
@@ -467,7 +465,7 @@ class SiteHandler(WebHandler):
         return not error
 
     @strFields(title = '', hostname = '', domainname = '', projecturl = '', 
-               blurb = '', appliance = 'unknown', shortname = '', namespace='',
+               blurb = '', appliance = 'unknown', shortname = '', namespace = '',
                prodtype = '', version = '', commitEmail='', isPrivate = 'on',
                platformLabel = '')
     @listFields(int, optlists = [])
@@ -483,7 +481,7 @@ class SiteHandler(WebHandler):
 
         pText = getProjectText().lower()
         if not namespace:
-            self._addErrors('You must supply a %s namespace' % pText)
+            namespace = self.cfg.namespace
         if not title:
             self._addErrors("You must supply a %s title"%pText)
         if not shortname:
