@@ -136,6 +136,8 @@ Web Front End Changes
 * The rBA Setup plugin now informs users how to login and redirects them
   to the rBuilder. (RBL-4186)
 * Products are created as private by default now. (RBL-4188)
+* Removed description, home page, commits email, and namespace options
+  from "Create Product" page.  (RBL-4188)
 
 Bug Fixes
 ---------------------
